--- a/week-2-lab.html
+++ b/week-2-lab.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-  <!--  Stephen McCormick
+	<!--  Stephen McCormick
 		Week 2 -->
 		
 	<head>
@@ -15,7 +15,7 @@
 	<body>
 		<div id="wrapper">
 		
-			<form name="MyForm">
+			<form id="MyFormID" name="MyForm">
 				First Name:<input id="firstName" class="boxes" type="text" placeholder="First Name" value="" /> <span class="error" id="err_firstName"></span>
 				<br />
 				Last Name:<input id="lastName" class="boxes" type="text" placeholder="Last Name" value="" /> <span class="error" id="err_lastName"></span>
@@ -24,13 +24,16 @@
 				<br />
 				Comments:
 				<br />
-				<textarea id="comments" class="boxes" rows="14" cols="60" name="comment_and" placeholder="enter comments here"></textarea> <span class="error" id="err_comment"></span>
+				<textarea id="comments" class="boxes" rows="6" cols="60" name="comment_and" placeholder="enter comments here"></textarea> <span class="error" id="err_comment"></span>
 				<br /> <br />
 				<input type="Button" value="Submit" onclick="submitForm();"/>
 				
 			</form>
 			
+			<div id="conformation">
+			</div>
+			
+			
 		</div>
-		
 	</body>
 </html>
