--- a/index.html
+++ b/index.html
@@ -1,65 +1,39 @@
 <!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/>
-  <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
-
-  <title>Week-2</title>
-  <meta name="description" content="Week 2 Lab in JavaScript">
-
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-
-</head>
-
-<body>
-
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Week-2</h1>
-    </header>
-    <div id="container">
-      <p class="tagline">Week 2 Lab in JavaScript</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/StephenMcCormick/Week-2/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/StephenMcCormick/Week-2/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/StephenMcCormick/Week-2" class="code">View Week-2 on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h1>
-<a name="week-2-lab-" class="anchor" href="#week-2-lab-"><span class="octicon octicon-link"></span></a>Week-2 lab </h1>
-
-<p>week 2 lab</p>
-        </article>
-      </div>
-    </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/StephenMcCormick" class="avatar"><img src="https://secure.gravatar.com/avatar/df3d7b549582d659af666faedb9aa716?s=30&amp;d=https%3A%2F%2Fidenticons.github.com%2Fa85b6d6b03c5b3843e9eac6cd4cee2bf.png" width="48" height="48"/></a> <a href="https://github.com/StephenMcCormick">StephenMcCormick</a> maintains <a href="https://github.com/StephenMcCormick/Week-2">Week-2</a></p>
-
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br/>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/StephenMcCormick/Week-2/tarball/master" class="tar">tar</a><a href="https://github.com/StephenMcCormick/Week-2/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
-</body>
+	<!--  Stephen McCormick
+		Week 2 -->
+		
+	<head>
+		<title> Week Two </title>
+		<!--  this is calling in the CSS  -->
+		<link rel="stylesheet" type="text/css" href="CSSstyle.css" />
+	</head>
+	 
+	 <!--  this is calling in the java script  -->
+	<script type="text/javascript" src="JSscript.js"></script>
+	
+	<body>
+		<div id="wrapper">
+		
+			<form id="MyFormID" name="MyForm">
+				First Name:<input id="firstName" class="boxes" type="text" placeholder="First Name" value="" /> <span class="error" id="err_firstName"></span>
+				<br />
+				Last Name:<input id="lastName" class="boxes" type="text" placeholder="Last Name" value="" /> <span class="error" id="err_lastName"></span>
+				<br />
+				Email: <input id="email" class="boxes" type="text" placeholder="sample@email.com" value="" /> <span class="error" id="err_email"></span>
+				<br />
+				Comments:
+				<br />
+				<textarea id="comments" class="boxes" rows="6" cols="60" name="comment_and" placeholder="enter comments here"></textarea> <span class="error" id="err_comment"></span>
+				<br /> <br />
+				<input type="Button" value="Submit" onclick="submitForm();"/>
+				
+			</form>
+			
+			<div id="conformation">
+			</div>
+			
+			
+		</div>
+	</body>
 </html>
